--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -38,9 +38,11 @@ What's different from AddressBook-Level1:
 * Support for marking a contact detail as 'private' (`pa/`) (`pe/`) (`pp/`)
 * View details of a person (`view` : shows non-private details), (`viewall` : shows all details)
 
+
 == Viewing help : `help`
 
 Format: `help`
+
 
 [TIP]
 ====
@@ -74,7 +76,7 @@ Format: `list`
 
 == Finding all persons containing any keyword in their name: `find`
 
-Finds persons whose names contain any of the given keywords. +
+Finds persons whose names contain any of the given keywords or whose keywords are substrings of names +
 Format: `find KEYWORD [MORE_KEYWORDS]`
 
 [NOTE]
@@ -90,6 +92,12 @@ Returns `John Doe` but not `john`.
 
 * `find Betsy Tim John` +
 Returns Any person having names `Betsy`, `Tim`, or `John`.
+
+* `find Joh` +
+Returns any person whose names contain Joh. Returns `John Doe` in this case. 
+
+* `find Joh Betsy Tim`  + 
+Returns `Betsy` and `Tim`. Arguments with keyword matching names and substrings of names mixed togeher will show persons whose names matches with the keyword only. 
 
 == Deleting a person : `delete`
 
